- Fixed bug #49660 (libxml 2.7.3+ limits text nodes to 10MB). (Felipe) - Added LIBXML_PARSEHUGE constant to overrides the maximum text size of a   single text node when using libxml2.7.3+. (Kalle) [DOC]

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@291533 c90b9560-bf6c-de11-be94-00142212c4b1